<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.fragments.dashboard.tabs.mcxFutures.MCXFutureFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_search" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/search_add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/bgColor2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_equalizer" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageVC"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/no_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nothing_here"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/watchlist_txt"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>