<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".ui.fragments.dashboard.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/showDetailsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_arrow_down" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/marketWatch"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/marketPriceShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_gold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldNseTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldNsePriceRangeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50-18313.90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/lightBlueTxt" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spot_silver"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverNseTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverNsePriceRangeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50-18313.90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/lightBlueTxt" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USD-INR"
                    android:textColor="@color/lightBlueTxt"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/usdInrPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="73.50"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/usdinrPriceRangeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="73.503-73.90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/lightBlueTxt" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gold Cost"
                    android:textColor="@color/lightBlueTxt"
                    android:textSize="21sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldTotalCostTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goldTotalPriceRangeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50-18313.90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/lightBlueTxt" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Silver Cost"
                    android:textColor="@color/lightBlueTxt"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverTotalPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/lightBlueTxt"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/silverPriceRangeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1856.50-18313.90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/lightBlueTxt" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/bgColor"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tabTextColor="@color/lightBlueTxt" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"

        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.appcompat.widget.LinearLayoutCompat>